SONARJAVA-2903 Rule S4825: Sending HTTP requests is security-sensitive (#2278)